# VacuumMesher

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Make.common  Makefile  README.md  bound_coil.jou  cubeMesh.e  cubitGeomBool.jou  hypervapotron.mesh  hypervapotron.msh  hypervapotronSkinned.mesh  libmesheleminfo.csv  libmeshinfo.csv  lol  q  tetgen-tmpfile_skipped.face  tetgen-tmpfile_skipped.node  theKallux.step
Documentation/: meshing guide.aux  meshing guide.tex  todo.txt
Examples/: example_coil.e  example_mesh.e
VacuumMeshing/: CMakeLists.txt  Doxyfile
VacuumMeshing/html/: RTree_8hpp_source.html  annotated.html  boundaryGeneration_8cpp.html  boundaryGeneration_8cpp__incl.map  boundaryGeneration_8cpp__incl.md5  boundaryGeneration_8cpp_source.html  boundaryGeneration_8hpp.html  boundaryGeneration_8hpp__dep__incl.map  boundaryGeneration_8hpp__dep__incl.md5  boundaryGeneration_8hpp__incl.map  boundaryGeneration_8hpp__incl.md5  boundaryGeneration_8hpp_source.html  box_8hpp_source.html  classRTFileStream-members.html  classRTFileStream.html  classRTree-members.html  classRTree.html  classRTree_1_1Iterator-members.html  classRTree_1_1Iterator.html  classRTree__coll__graph.map  classRTree__coll__graph.md5  classes.html  dir_000001_000003.html  dir_000003_000002.html  dir_000004_000002.html  dir_000006_000000.html  dir_000007_000000.html  dir_000008_000000.html  dir_233909e12d18a3d64b5ffb15954320c9.html  dir_2d1d991c66e7a032b2ab80c11328e79c.html  dir_2d1d991c66e7a032b2ab80c11328e79c_dep.map  dir_2d1d991c66e7a032b2ab80c11328e79c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_77942da9e0822c4939790849f15cf4ff.html  dir_77942da9e0822c4939790849f15cf4ff_dep.map  dir_77942da9e0822c4939790849f15cf4ff_dep.md5  dir_7b68157d97a90973332d5d12bae7e948.html  dir_7b68157d97a90973332d5d12bae7e948_dep.map  (+68 more)
VacuumMeshing/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js
VacuumMeshing/include/BoundaryGeneration/: BoundaryGenerator.hpp  CoilBoundaryGenerator.hpp  boundaryGeneration.hpp  generateBoundaries.hpp  meshBoolean.hpp
VacuumMeshing/include/SurfaceMeshing/: SurfaceGenerator.hpp  surfaceMeshing.hpp
VacuumMeshing/include/Tetrahedralisation/: VacuumGenerator.hpp  removeDupeNodes.hpp  tetMaker.hpp
VacuumMeshing/include/Utils/: box.hpp  divConq.hpp  libmeshConversions.hpp  parseFlags.hpp  removeDupeNodes.hpp  utils.hpp
VacuumMeshing/include/VacuumGeneration/: VacuumGenerator.hpp
VacuumMeshing/latex/: annotated.tex  boundaryGeneration_8cpp.tex  boundaryGeneration_8cpp__incl.md5  boundaryGeneration_8hpp.tex  boundaryGeneration_8hpp__dep__incl.md5  boundaryGeneration_8hpp__incl.md5  classRTFileStream.tex  classRTree.tex  classRTree_1_1Iterator.tex  classRTree__coll__graph.md5  files.tex  refman.tex  removeDupeNodes_8hpp.tex  removeDupeNodes_8hpp__dep__incl.md5  structBox.tex  structRTree_1_1Branch.tex  structRTree_1_1Branch__coll__graph.md5  structRTree_1_1ListNode.tex  structRTree_1_1ListNode__coll__graph.md5  structRTree_1_1Node.tex  structRTree_1_1Node__coll__graph.md5  structRTree_1_1PartitionVars.tex  structRTree_1_1PartitionVars__coll__graph.md5  structRTree_1_1Rect.tex  structinputFlags.tex  surfaceMeshing_8hpp.tex  surfaceMeshing_8hpp__dep__incl.md5  surfaceMeshing_8hpp__incl.md5
VacuumMeshing/src/BoundaryGeneration/: BoundaryGenerator.cpp  CoilBoundaryGenerator.cpp  boundaryGeneration.cpp  changeOfBase.cpp  generateBoundaries.cpp
VacuumMeshing/src/SurfaceMeshing/: SurfaceGenerator.cpp  surfaceMeshing.cpp
VacuumMeshing/src/Tetrahedralisation/: VacuumGenerator.cpp  removeDupeNodes.cpp  tetMaker.cpp
VacuumMeshing/src/Utils/: ClosestPairFinder.cpp  divConq.cpp  getElemInfo.cpp  libmeshConversions.cpp  parseFlags.cpp  removeDupeNodes.cpp
VacuumMeshing/src/VacuumGeneration/: VacuumGenerator.cpp
Visualisations/: chimeraVacMesh.pvsm  hyperExample.pvsm
include/: MeshContainer.hpp  MeshPair.hpp  box.hpp  flipNormals.hpp  genFullMesh.hpp  generateBoundaries.hpp  (+10 more)
problems/: 2dBound.cpp  CMakeLists.txt  beeHive.cpp  block1_tetra.cpp  block2_tetra.cpp  block3_tetra.cpp  block5_tetra.cpp  block6_0_tetra.cpp  block6_1_tetra.cpp  block6_tetra.cpp  boundaryTester.cpp  changeBase.cpp  chimera.cpp  chimera_tetra.cpp  coilRun.cpp  cube.cpp  cubeTet.cpp  cubetest.cpp  fullRun.cpp  genVacFromSurf.cpp  generateVacuumTet.cpp  getNormal.cpp  hypervapotron.cpp  libiglTransfer.cpp  main.cpp  makeVacuumMesh.cpp  meshBooleanOperations.cpp  poc.cpp  removeDuplicates.cpp  reskinner.cpp  skinMesh.cpp  skinMeshTwo.cpp  skinner.cpp  sphere.cpp  tetrahedra.cpp
test/: CMakeLists.txt  runTests  tests.cpp
test/include/: BasicTest.hpp  BoundaryTest.hpp  CGALTransferTest.hpp  CoilBoundaryTest.hpp  IGLTransferTest.hpp  LoadUnitsTests.h  MeshTest.hpp  SkinningTest.hpp  TetrahedraliseTest.hpp  TransferTest.hpp  VacuumTest.hpp  argsHelper.h  initer.h  libmesh_test_init.hpp  vacuumTest.hpp
test/src/: BoundaryMeshingTests.cpp  CGALCubeTransTest.cpp  ChimTest.cpp  CoilBoundaryMeshingTests.cpp  DivideAndConqTest.cpp  HypTest.cpp  HypTransferTest.cpp  LoadUnitsTests.cpp  SurfaceMeshingTests.cpp  VacuumMeshingTests.cpp  cubeSkinningTest.cpp  hourglassSkinningTest.cpp  kallaxIntTest.cpp  kallaxSkinningTest.cpp  kallaxSurfaceTest.cpp  kallaxTest.cpp  libmesh_test_init.cpp  main.cpp
test/testingMeshes/DivConqMesh/: DivConqTetMesh.e  DivConqTriMesh.e
test/testingMeshes/hollow_sphere/: hollow_sphere.e
test/testingMeshes/hourglass/: hourglass.e  hourglass_surf.e
test/testingMeshes/kallax/: kallax.e  kallax_surf.e
test/testingMeshes/sideset_cube/: sideset_cube.e
test/testingMeshes/unit_cube/: unit_cube.e  unit_cube_surf.e
(+75 files in other folders)
